fix(Styles): I managed to break the default post no picture layout on mobiles by not paying attention last night. Fixed that by moving the default top padding to the correct class which is only added when there is a masthead present

--- a/assets/css/fucomp.css
+++ b/assets/css/fucomp.css
@@ -3,6 +3,9 @@
   font-family: "droid_sansregular";
   letter-spacing: 1px;
   line-height: 150%;
+}
+
+.Post-image {
   padding-top: 100vh;
 }
 
